Cobertura tests provided with more memory.