@@ -200,6 +200,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<argLine>-XX:MaxPermSize=4096m -Xmx4096m</argLine>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -213,6 +216,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<failOnError>false</failOnError>
+				</configuration>
 			</plugin>
 
 
@@ -292,6 +298,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.17</version>
+				<configuration>
+				<argLine>-XX:MaxPermSize=4096m -Xmx4096m</argLine>
+				</configuration>
 			</plugin>
 
 			<!-- test coverage report -->
